hotfix google map link

--- a/src/flavors/pboakland/jstemplates/pages/getinvolved.html
+++ b/src/flavors/pboakland/jstemplates/pages/getinvolved.html
@@ -26,7 +26,7 @@
 {{#_}}<h4>District 1 - Assembly (Spanish)</h4>
 <strong> Saturday, January 28th 1:00 pm - 3:00 pm</strong>
 <br>Beebe Memorial Cathedral
-<a href="https://participatorybudgeting.nationbuilder.com/r?u=https%3A%2F%2Fwww.google.com%2Fmaps%2Fplace%2FWilliams%2BChapel%2BBaptist%2BChurch%2F%4037.792124%2C-122.2513913%2C17z%2Fdata%3D%213m1%214b1%214m5%213m4%211s0x808f87246c4dce49%3A0x75f519425c5dafab%218m2%213d37.792124%214d-122.249208&e=1860e7904dcd651a71dfc072d7cae68cb859e106&utm_source=participatorybudgeting&utm_medium=email&utm_campaign=oakd1assemblies&n=2&test_email=1"><br>3900 Telegraph Ave.
+<a href="https://www.google.com/maps/place/Beebe+Memorial+Cathedral/@37.8283232,-122.26643,17z/data=!3m1!4b1!4m5!3m4!1s0x80857dfd413562d9:0x9883d2d3e980e87!8m2!3d37.828319!4d-122.264236"><br>3900 Telegraph Ave.
 <br>Oakland, CA 94606</a>
 <br>English/Spanish Translation{{/_}}
 <h4>{{#_}}<a href="https://participatorybudgeting.nationbuilder.com/r?u=https%3A%2F%2Fdocs.google.com%2Fforms%2Fd%2Fe%2F1FAIpQLSdQhm7CNUsSR5Ovl0257eGftoGdRvrZTBJJgmkcAWwYPiIxTQ%2Fviewform&e=1860e7904dcd651a71dfc072d7cae68cb859e106&utm_source=participatorybudgeting&utm_medium=email&utm_campaign=oakd1assemblies&n=3&test_email=1">RSVP here!</a>{{/_}}</h4>
