update get involved page

--- a/src/flavors/pboakland/jstemplates/pages/getinvolved.html
+++ b/src/flavors/pboakland/jstemplates/pages/getinvolved.html
@@ -6,23 +6,6 @@
 
 <p>{{#_}}Discuss your ideas in person with your neighbors at an upcoming Neighborhood Assembly!{{/_}}</p>
 
-{{#_}}<h4>District 2 - Assembly (Chinese)</h4>
-<strong>Wednesday, January 25th
-6:00 pm - 8:00 pm</strong>
-<br>Asian Cultural Center
-<a href="https://participatorybudgeting.nationbuilder.com/r?u=https%3A%2F%2Fwww.google.com%2Fmaps%2Fplace%2FOakland%2BAsian%2BCultural%2BCenter%2F%4037.8004548%2C-122.2738912%2C17z%2Fdata%3D%214m5%213m4%211s0x808f80b67f1b9b13%3A0xd8fb3880e03d5091%218m2%213d37.8004548%214d-122.2717025&e=1860e7904dcd651a71dfc072d7cae68cb859e106&utm_source=participatorybudgeting&utm_medium=email&utm_campaign=oakassembly&n=2&test_email=1"><br>388 9th Street, Suite 290
-<br>Oakland, CA 94607</a>
-<br>English/Chinese Translation{{/_}}
-<h4>{{#_}}<a href="https://participatorybudgeting.nationbuilder.com/r?u=https%3A%2F%2Fdocs.google.com%2Fforms%2Fd%2Fe%2F1FAIpQLSdjvMEknTchNBxteVitB3340hKzZrAP0tTXbb9ogXwaZfVxew%2Fviewform&e=1860e7904dcd651a71dfc072d7cae68cb859e106&utm_source=participatorybudgeting&utm_medium=email&utm_campaign=oakassembly&n=6&test_email=1">RSVP here!</a>{{/_}}</h4>
-<br>
-{{#_}}<h4>District 2 - Assembly (Spanish)</h4>
-<strong>Thursday, January 26th 6:00 pm - 8:00 pm</strong>
-<br>Williams Chapel
-<a href="https://participatorybudgeting.nationbuilder.com/r?u=https%3A%2F%2Fwww.google.com%2Fmaps%2Fplace%2FWilliams%2BChapel%2BBaptist%2BChurch%2F%4037.792124%2C-122.2513913%2C17z%2Fdata%3D%213m1%214b1%214m5%213m4%211s0x808f87246c4dce49%3A0x75f519425c5dafab%218m2%213d37.792124%214d-122.249208&e=1860e7904dcd651a71dfc072d7cae68cb859e106&utm_source=participatorybudgeting&utm_medium=email&utm_campaign=oakassembly&n=4&test_email=1"><br>1410 10th Ave.
-<br>Oakland, CA 94606</a>
-<br>English/Spanish Translation{{/_}}
-<h4>{{#_}}<a href="https://participatorybudgeting.nationbuilder.com/r?u=https%3A%2F%2Fdocs.google.com%2Fforms%2Fd%2Fe%2F1FAIpQLSdjvMEknTchNBxteVitB3340hKzZrAP0tTXbb9ogXwaZfVxew%2Fviewform&e=1860e7904dcd651a71dfc072d7cae68cb859e106&utm_source=participatorybudgeting&utm_medium=email&utm_campaign=oakassembly&n=6&test_email=1">RSVP here!</a>{{/_}}</h4>
-<br>
 {{#_}}<h4>District 1 - Assembly (Spanish)</h4>
 <strong> Saturday, January 28th 1:00 pm - 3:00 pm</strong>
 <br>Beebe Memorial Cathedral
@@ -33,7 +16,7 @@
 <br>
 <p>{{#_}}This is a FREE event! Food, activities for children and translation will be provided!{{/_}}</p>
 
-{{#_}}<a href="https://docs.google.com/forms/d/e/1FAIpQLSdjvMEknTchNBxteVitB3340hKzZrAP0tTXbb9ogXwaZfVxew/viewform"><img src="http://i.imgur.com/VMu0cem.png"></a>{{/_}}
+{{#_}}<a href="https://participatorybudgeting.nationbuilder.com/r?u=https%3A%2F%2Fdocs.google.com%2Fforms%2Fd%2Fe%2F1FAIpQLSdQhm7CNUsSR5Ovl0257eGftoGdRvrZTBJJgmkcAWwYPiIxTQ%2Fviewform&e=1860e7904dcd651a71dfc072d7cae68cb859e106&utm_source=participatorybudgeting&utm_medium=email&utm_campaign=oakd1assemblies&n=3&test_email=1"><img src="http://i.imgur.com/0SGzi7a.png"></a>{{/_}}
 
 <h3>{{#_}}Volunteer{{/_}}</h3>
 
