--- a/src/flavors/pboakland/jstemplates/pages/getinvolved.html
+++ b/src/flavors/pboakland/jstemplates/pages/getinvolved.html
@@ -2,6 +2,8 @@
 
 <p>{{#_}}Already submitted an idea? There are many more ways to get involved in participatory budgeting:{{/_}}</p>
 
+<em><h4>The PB Vote is coming up Feb 18-22nd! <br>Stay tuned for details on voting locations.</h4></em>
+<br>
 <h3>{{#_}}Volunteer{{/_}}</h3>
 
 <p>{{#_}}There are lots of ways to get involved in PB in Oakland! You can help to get the word out to district residents, facilitate small group meetings, provide support at PB events, and more. Sign up <a href="http://www.123contactform.com/form-2317799/PB-Oakland-Volunteer-Sign-Up" target="_blank">here</a>.{{/_}}</p>
