turn off idea collection, content update for next phase

--- a/src/flavors/pboakland/jstemplates/pages/overview.html
+++ b/src/flavors/pboakland/jstemplates/pages/overview.html
@@ -4,12 +4,13 @@
 
 <p>{{#_}}is an innovative democratic process that gives Oakland residents of City Council Districts 1 and 2 the power to decide how federal Community Development Block Grant (CDBG) funds should be spent to improve low-to-moderate income communities in their district.{{/_}}</p>
 
-<h4>{{#_}}Idea submission for the PB process in Districts 1 and 2 is now open! If you have an idea for a project to improve your district, please share it on the map!{{/_}}</h4>
+{{#_}}<em><h4>The idea collection phase has now ended.</em>
+
+<h5>Up next is the PB Vote which is coming up Feb 18-22nd! <br>Stay tuned for details on voting locations.</h4></h5>{{/_}}
 <br>
-<p>{{#_}}In early February, community volunteers will review and prioritize all of the ideas and turn them into full proposals. At the end of February, residents of low- and moderate-income neighborhoods in Districts 1 and 2 will vote on the top projects.{{/_}}</p>
 
 <p>{{#_}}For more information on the City of Oakland’s Community Development Block Grant (CDBG) program, click <a href="http://www2.oaklandnet.com/government/o/hcd/s/CDBG/index.htm" target=”_blank”>here</a>.{{/_}}</p>
 
 <p>{{#_}}For information on participatory budgeting in the U.S. and Canada, visit the website of the <a href="http://www.participatorybudgeting.org/" target=”_blank”>Participatory Budgeting Project</a>.{{/_}}</p>
 
-<p class="btn btn-block btn-large close-btn">{{#_}}Start Mapping!{{/_}}</p>
+<p class="btn btn-block btn-large close-btn">{{#_}}Explore the map!{{/_}}</p>
