--- a/src/base/jstemplates/place-detail.html
+++ b/src/base/jstemplates/place-detail.html
@@ -3,18 +3,25 @@
         {{> place-detail-promotion-bar }}
 
         <header class="place-header clearfix">
-          <h1 class="place-header-title {{#if story}}is-visuallyhidden{{/if}}">
-            {{>location-string location }}
-            {{#if fullTitle}}
-              {{fullTitle}}
+          {{>location-string location }}
+          <form id="update-place-model-title-form">
+            {{#if isEditingToggled}}
+              <input type="text" class="place-value place-value-title" name="title" 
+                     value="{{#if fullTitle}}{{fullTitle}}{{else}}{{#if title}}{{title}}{{else}}{{name}}{{/if}}{{/if}}" />
             {{else}}
-              {{#if title}}
-                {{title}}
-              {{else}}
-                {{name}}
-              {{/if}}
+              <h1 class="place-header-title {{#if story}}is-visuallyhidden{{/if}}">
+                {{#if fullTitle}}
+                  {{fullTitle}}
+                {{else}}
+                  {{#if title}}
+                    {{title}}
+                  {{else}}
+                    {{name}}
+                  {{/if}}
+                {{/if}}
+              </h1>
             {{/if}}
-          </h1>
+          </form>
           <span class="place-submission-details">
             {{#is_not showMetadata false}}
               {{#_}}<strong class="point-submitter">
@@ -51,9 +58,9 @@
         </header>
 
         <section class="place-items">
-          {{# attachments }}
-            <div class="place-item place-item-attachment place-attachment-{{ name }}">
-              <img src="{{ file }}" class="place-value place-value-{{ name }}" alt="{{ name }}" />
+          {{#if isEditable}}
+            <div id="toggle-editor-btn" class="btn btn-small editor-btn">
+              <i class="fa fa-pencil" aria-hidden="true"></i> {{#_}}Edit this post{{/_}}
             </div>
           {{/ attachments }}
 
@@ -118,16 +125,141 @@
                       </li>
                     </ul>
                   {{/if}}
-                {{/each}}
-              {{/is}}
-            </div>
-          {{/each_place_item }}
-          <div class="clearfix"></div>
+                {{/is}}
+                
+                {{#is type "text"}}
+                  {{#if isEditingToggled}}
+                    <input type="text" class="place-value place-value-{{ ../name }}" name="{{ ../name }}" value="{{nlToBr content}}" />
+                  {{else}}
+                    <p class="place-value place-value-{{ ../name }}">{{nlToBr content}}</p>
+                  {{/if}}
+                {{/is}}
+
+                {{#is type "textarea"}}
+                  {{#if isEditingToggled}}
+                    <textarea class="place-value place-value-{{ ../name }}" name="{{ ../name }}">{{nlToBr content}}</textarea>
+                  {{else}}
+                    <p class="place-value place-value-{{ ../name }}">{{nlToBr content}}</p>
+                  {{/if}}
+                {{/is}}
+
+                {{#is type "radio_big_buttons"}}
+                  {{#if isEditingToggled}}
+                    <div>
+                      {{#each content}}
+                        <input type="radio" 
+                               name={{ ../name }} 
+                               id={{ value }} 
+                               value={{ value }} 
+                               class="big-btn" 
+                               {{#if selected}}checked{{/if}} />
+                        <label for={{ value }}>{{ label }}</label>
+                      {{/each}}
+                    </div>
+                    <div style="clear:both"></div>
+                  {{else}}
+                    <div>
+                      {{#each content}}
+                        {{#if selected}}
+                          <span class="multi-select-response">{{ label }} </span>
+                        {{/if}}
+                      {{/each}}
+                    </div>
+                  {{/if}}
+                {{/is}}
+
+                {{#is type "checkbox_big_buttons"}}
+                  {{#if isEditingToggled}}
+                    <div>
+                      {{#each content}}
+                        <input type="checkbox" 
+                               name={{ ../name }} 
+                               id={{ value }} 
+                               value={{ value }} 
+                               class="big-btn" 
+                               {{#if selected}}checked{{/if}} />
+                        <label for={{ value }}>{{ label }}</label>
+                      {{/each}}
+                    </div>
+                  {{else}}
+                    <div>
+                      {{#each content}}
+                        {{#if selected}}
+                          <span class="multi-select-response">{{ label }} </span>
+                        {{/if}}
+                      {{/each}}
+                    </div>
+                  {{/if}}
+                {{/is}}
+
+                {{#is type "binary_toggle"}}
+                  {{#if ../isEditingToggled}}
+                    <div>
+                      <input type="checkbox" 
+                             name={{ name }} 
+                             id={{ name }} 
+                             value={{#if content.selected}}
+                                     {{ content.selectedValue }}
+                                   {{else}}
+                                     {{ content.unselectedValue }}
+                                   {{/if}}
+                             data-input-type="binary_toggle" 
+                             class="big-btn" 
+                             {{#if content.selected}}checked{{/if}} />
+                      <label for={{ name }}>
+                        {{#if content.selected}}
+                          {{ content.selectedLabel }}
+                        {{else}}
+                          {{ content.unselectedLabel }}
+                        {{/if}}
+                      </label>
+                    </div>
+                  {{else}}
+                    <p>
+                      {{#if content.selected}}
+                        {{ content.selectedLabel }}
+                      {{else}}
+                        {{ content.unselectedLabel }}
+                      {{/if}}
+                    </p>
+                  {{/if}}
+                {{/is}}
+
+                {{#is type "dropdown"}}
+                  {{#if isEditingToggled}}
+                    <div>
+                      <select name={{ ../name }}>
+                        <option value="" name="no_response">{{#_}}Select...{{/_}}</option>
+                        {{#each content}}
+                          <option value={{ value }} {{#if selected}}selected{{/if}}>{{ label }}</option>
+                        {{/each}}
+                      </select>
+                    </div>
+                    <div style="clear:both"></div>
+                  {{else}}
+                    {{#each content}}
+                      <p>
+                        {{#if selected}}
+                          {{nlToBr label}}
+                        {{/if}}
+                      </p>
+                    {{/each}}
+                  {{/if}}
+                {{/is}}
+
+                {{#is type "rawHTML"}}
+                  <!-- NOTE: assume QuillJS will be used to edit content of this type -->
+                  <div class="place-value place-value-{{ ../name }}">{{{content}}}</div>
+                {{/is}}
+
+                <div style="clear:both"></div>
+              </div>
+            {{/each_place_item }}
+          </form>
         </section>
 
         {{#if survey_config}}
-
-        <section class="survey" id="survey"></section>
+          <section class="survey" id="survey"></section>
         {{/if}}
 
         {{> place-detail-story-bar-tagline }}
