--- a/src/base/jstemplates/place-detail.html
+++ b/src/base/jstemplates/place-detail.html
@@ -175,13 +175,13 @@
                     </div>
                     <div style="clear:both"></div>
                   {{else}}
-                    <div>
+                    <ul>
                       {{#each content}}
                         {{#if selected}}
-                          <span class="multi-select-response">{{ label }} </span>
+                          <li class="multi-select-response">{{ label }} </li>
                         {{/if}}
                       {{/each}}
-                    </div>
+                    </ul>
                   {{/if}}
                 {{/is}}
 
@@ -199,13 +199,13 @@
                       {{/each}}
                     </div>
                   {{else}}
-                    <div>
+                    <ul>
                       {{#each content}}
                         {{#if selected}}
-                          <span class="multi-select-response">{{ label }} </span>
+                          <li class="multi-select-response">{{ label }} </li>
                         {{/if}}
                       {{/each}}
-                    </div>
+                    </ul>
                   {{/if}}
                 {{/is}}
 
