update English and Spanish flyers

--- a/src/flavors/pboakland/jstemplates/pages/overview.html
+++ b/src/flavors/pboakland/jstemplates/pages/overview.html
@@ -6,9 +6,12 @@
 
 {{#_}}<em><h4>The idea collection phase has now ended.</em>
 
-<h5>Up next is the PB Vote which is coming up Feb 18-22nd! <br>Stay tuned for details on voting locations.</h4></h5>{{/_}}
-<br>
+<h5>Up next is the PB Vote which is coming up Feb 18-22nd! {{/_}}</h5>	
 
+{{#_}}
+<img src="http://i.imgur.com/u13G9jG.png">
+<img src="http://i.imgur.com/nkhPpWV.png">
+{{/_}}
 <p>{{#_}}For more information on the City of Oakland’s Community Development Block Grant (CDBG) program, click <a href="http://www2.oaklandnet.com/government/o/hcd/s/CDBG/index.htm" target=”_blank”>here</a>.{{/_}}</p>
 
 <p>{{#_}}For information on participatory budgeting in the U.S. and Canada, visit the website of the <a href="http://www.participatorybudgeting.org/" target=”_blank”>Participatory Budgeting Project</a>.{{/_}}</p>
