--- a/src/flavors/pboakland/jstemplates/pages/overview.html
+++ b/src/flavors/pboakland/jstemplates/pages/overview.html
@@ -4,11 +4,14 @@
 
 <p>{{#_}}is an innovative democratic process that gives Oakland residents of City Council Districts 1 and 2 the power to decide how federal Community Development Block Grant (CDBG) funds should be spent to improve low-to-moderate income communities in their district.{{/_}}</p>
 
-{{#_}}<em><h4>The idea collection phase has now ended.</em>
+<h4>The PB Vote on priority projects is coming up February 18-22!</h4>
 
-<h5>Up next is the PB Vote which is coming up Feb 18-22nd! {{/_}}</h5>	
+<p>Voting will take place at the district kick off events (details below), online, and at mobile sites throughout the districts. For more details on how and where to vote, take the voter pledge for either <a href="https://docs.google.com/forms/d/e/1FAIpQLSeaF_sVrNBVBdin5UvY4rnNo418fNqzFA5UR_HFBze4DU-3iQ/viewform">District 1</a> or <a href="https://docs.google.com/forms/d/e/1FAIpQLSelb-kU-Om5aaVBa80XCpUorlnulyIOPqGxJDtiMNNG3dC96g/viewform">District 2</a>
 
 {{#_}}
+
+<br>
+<br>
 <img src="http://i.imgur.com/u13G9jG.png">
 <img src="http://i.imgur.com/nkhPpWV.png">
 {{/_}}
