--- a/src/flavors/pboakland/jstemplates/pages/getinvolved.html
+++ b/src/flavors/pboakland/jstemplates/pages/getinvolved.html
@@ -2,8 +2,10 @@
 
 <p>{{#_}}Already submitted an idea? There are many more ways to get involved in participatory budgeting:{{/_}}</p>
 
-<em><h4>The PB Vote is coming up Feb 18-22nd!
-
+<em><h4>The PB Vote takes place Feb 18-22nd!</h4>
+<p>
+Voting will take place at the district kick off events (details below), online at this website, and at mobile sites throughout the districts. For more details on how and where to vote, take the voter pledge for either <a href="https://docs.google.com/forms/d/e/1FAIpQLSeaF_sVrNBVBdin5UvY4rnNo418fNqzFA5UR_HFBze4DU-3iQ/viewform">District 1</a> or <a href="https://docs.google.com/forms/d/e/1FAIpQLSelb-kU-Om5aaVBa80XCpUorlnulyIOPqGxJDtiMNNG3dC96g/viewform">District 2</a>. Online voting will open February 18th on this website - check back then to vote online! 
+</p></em>
 {{#_}}
 <img src="http://i.imgur.com/u13G9jG.png">
 <img src="http://i.imgur.com/nkhPpWV.png">
