--- a/src/flavors/pboakland/jstemplates/pages/getinvolved.html
+++ b/src/flavors/pboakland/jstemplates/pages/getinvolved.html
@@ -11,7 +11,7 @@
 </em>
 {{/_}}
 {{#_}}
-<strong><p>Voting will take place at the district kick off events (details below), online, and at mobile sites throughout the districts.<br><br>Online voting will run through Feb 22</strong>
+<strong><p>Voting will take place at the district kick off events (details below), online, and at mobile sites throughout the districts.<br><br>Online voting is open through Thursday, Feb. 23rd at 11:59 pm!</strong>
 {{/_}}
 {{#_}}
 <img src="http://i.imgur.com/u13G9jG.png">
