--- a/src/flavors/pboakland/jstemplates/pages/overview.html
+++ b/src/flavors/pboakland/jstemplates/pages/overview.html
@@ -10,7 +10,7 @@
 </em>
 {{/_}}
 {{#_}}
-<strong><p>Voting will take place at the district kick off events (details below), online, and at mobile sites throughout the districts.<br><br>Online voting will run through Feb 22</strong>
+<strong><p>Voting will take place at the district kick off events (details below), online, and at mobile sites throughout the districts.<br><br>Online voting is open through Thursday, Feb. 23rd at 11:59 pm!</strong>
 {{/_}}
 <br>
 <br>
