--- a/src/base/jstemplates/place-form-field-types.html
+++ b/src/base/jstemplates/place-form-field-types.html
@@ -6,8 +6,7 @@
       <div class="geocode-spinner is-hidden"></div>
       <input name="{{ name }}" 
              {{#attrs}} {{ key }}="{{ value }}"{{/attrs}} 
-             type="text" 
-             id="geocode-address-field" 
+             type="text" id="geocode-address-field" 
              class="geocode-address-field"
              value={{autocompleteValue}}>
     </div>
@@ -17,26 +16,25 @@
 {{#is type "datetime"}}
   <input id="datetimepicker" 
          name="{{ name }}" 
-         type="text"
+         type="text" 
          {{#if autocompleteValue}}class="isAutocomplete"{{/if}}
-         {{^optional}}required{{/optional}}
+         {{^optional}}required{{/optional}} 
          value={{autocompleteValue}}>
 {{/is}}
 
 {{#is type "text"}}
-  <input id="place-{{ name }}" 
+  <input id="place-{{ name }}"
          {{#if autocompleteValue}}class="isAutocomplete"{{/if}}
          name="{{ name }}" 
          type="{{ type }}" 
          {{#attrs}} {{ key }}="{{ value }}"{{/attrs}} 
          {{#unless autocompleteValue}} placeholder="{{ placeholder }}"{{/unless}}
-         placeholder="{{placeholder}}" 
-         {{^optional}}required{{/optional}}
+         {{^optional}}required{{/optional}} 
          value={{autocompleteValue}}>
 {{/is}}
 
 {{#is type "textarea"}}
-  <textarea id="place-{{ name }}" 
+  <textarea id="place-{{ name }}"
             {{#if autocompleteValue}}class="isAutocomplete"{{/if}}
             name="{{ name }}" 
             {{#attrs}} {{ key }}="{{ value }}"{{/attrs}} 
@@ -44,13 +42,9 @@
             {{^optional}}required{{/optional}}>{{autocompleteValue}}</textarea>
 {{/is}}
 
-{{#is type "richTextarea"}}
-  <textarea id="place-{{ name }}" 
-            class="rich-text-field{{#if autocompleteValue}} isAutocomplete{{/if}}"
-            name="{{ name }}" 
-            {{#attrs}} {{ key }}="{{ value }}"{{/attrs}} 
-            {{#unless autocompleteValue}} placeholder="{{ placeholder }}"{{/unless}}
-            {{^optional}}required{{/optional}}>{{autocompleteValue}}</textarea>
+{{#is type "rawHTML"}}
+  <!-- NOTE: assume QuillJS will be used to edit content of this type -->
+  <div id="place-{{ name }}" class="rawHTML"></div>
 {{/is}}
 
 {{#is type "radio_big_buttons"}}
@@ -58,12 +52,11 @@
     {{#each content}}
         <input type="radio" 
                name={{ ../name }} 
-               id={{ value }} 
-               value={{ value }} 
+               id={{ value }} value={{ value }} 
                class="big-btn" 
-               {{^../optional}}required{{/../optional}}
+               {{^optional}}required{{/optional}}
                {{#contains value ../autocompleteValue}}checked{{/contains}}>
-        <label for={{ value }}
+        <label for={{ value }} 
                class="{{#contains value ../autocompleteValue}}isAutocomplete{{/contains}}">{{ label }}</label>
     {{/each}}
   </div>
@@ -79,7 +72,7 @@
              value={{ value }} 
              class="big-btn"
              {{#contains value ../autocompleteValue}}checked{{/contains}}>
-      <label for={{ value }}
+      <label for={{ value }} 
              class="{{#contains value ../autocompleteValue}}isAutocomplete{{/contains}}">{{ label }}</label>
     {{/each}}
   </div>
@@ -89,7 +82,7 @@
   <div>
     <input type="checkbox" 
            name={{ name }} 
-           id={{ name }} 
+           id={{ name }}
            value={{#if autocompleteValue}}
                    {{ autocompleteValue }}
                  {{else}}
@@ -127,15 +120,6 @@
   </div>
   <div style="clear:both"></div>
 {{/is}}
-<div style="clear:both"></div>
-
-{{#is type "section_header"}}
-  <h3 id={{ name }} class="form-section-header">{{content}}</h3>
-{{/is}}
-
-{{#is type "section_description"}}
-  <p id={{ name }} class="form-section-description">{{content}}</p>
-{{/is}}
 
 {{#is type "file"}}
   <span class="fileinput-container btn btn-small{{#if_fileinput_not_supported}} btn-disabled{{/if_fileinput_not_supported}}">
@@ -154,8 +138,9 @@
     <input name="save-place-btn" id="save-place-btn" type="submit" value="{{ label }}" class="btn btn-primary submit-btn">
   </div>
 {{/is}}
+<div style="clear:both"></div>
 
-<!-- optional post-form field message -->
+<!-- optional message appearing after the input type -->
 {{#if annotation}}
   <div class="form-annotation">{{annotation}}</div>
 {{/if}}
