--- a/src/flavors/bogtobay/jstemplates/pages/overview.html
+++ b/src/flavors/bogtobay/jstemplates/pages/overview.html
@@ -1,12 +1,7 @@
 <h1>{{#_}}Welcome{{/_}}</h1>
 
-<p>{{#_}}We are a community of residents and stakeholders who are monitoring environmental health issues in Seattle's Duwamish Valley.{{/_}}</p>
-
-<ul>
-<li>{{#_}}Help us out and <a href="/place/new">submit a report</a> on the map!{{/_}}</li>
-<li>{{#_}}Here's a little <a href="/page/background">background</a> on the lower Duwamish superfund site and the cleanup of toxic waste in the river.{{/_}}</li>
-</ul>
-
+<p>{{#_}}We are here to educate and inspire the environmental stewardship of Longfellow Creek in West Seattle, starting with Roxhill Bog, all the way down to Elliot Bay!{{/_}}</p>
+<img src="https://5937delridge.files.wordpress.com/2011/10/beaver-pond1.jpg">
 <p class="btn btn-block btn-large close-btn">{{#_}}Start Mapping!{{/_}}</p>
 <br>
 <br>
