--- a/src/flavors/bogtobay/jstemplates/pages/overview.html
+++ b/src/flavors/bogtobay/jstemplates/pages/overview.html
@@ -1,8 +1,10 @@
 <h1>{{#_}}Welcome{{/_}}</h1>
 
 <p>{{#_}}We are here to educate and inspire the environmental stewardship of Longfellow Creek in West Seattle, starting with Roxhill Bog, all the way down to Elliot Bay!{{/_}}</p>
+<a href="/longfellow" rel="internal">
 <img src="https://5937delridge.files.wordpress.com/2011/10/beaver-pond1.jpg">
 <p class="btn btn-block btn-large close-btn">{{#_}}Start Mapping!{{/_}}</p>
+</a>
 <br>
 <br>
 {{#_}}This project made possible by our generous <a href="/page/sponsors">sponsors{{/_}}</a>.
