--- a/src/flavors/bogtobay/jstemplates/pages/overview.html
+++ b/src/flavors/bogtobay/jstemplates/pages/overview.html
@@ -1,10 +1,43 @@
 <h1>{{#_}}Welcome{{/_}}</h1>
 
-<p>{{#_}}We are here to educate and inspire the environmental stewardship of Longfellow Creek in West Seattle, starting with Roxhill Bog, all the way down to Elliot Bay!{{/_}}</p>
+<!-- <p>{{#_}}We are here to educate and inspire the environmental stewardship of Longfellow Creek in West Seattle, starting with Roxhill Bog, all the way down to Elliot Bay!{{/_}}</p>
 <a href="/longfellow" rel="internal">
 <img src="https://5937delridge.files.wordpress.com/2011/10/beaver-pond1.jpg">
 <p class="btn btn-block btn-large close-btn">{{#_}}Start Mapping!{{/_}}</p>
 </a>
 <br>
 <br>
-{{#_}}This project made possible by our generous <a href="/page/sponsors">sponsors{{/_}}</a>.
+{{#_}}This project made possible by our generous <a href="/page/sponsors">sponsors{{/_}}</a>. -->
+
+<p>{{#_}}We are here to educate and inspire the environmental stewardship of Longfellow Creek in West Seattle, starting with Roxhill Bog, all the way down to Elliot Bay!{{/_}}</p>
+
+<figure class="snip1579">
+	<img src="/static/css/images/beaver-pond1.jpg" alt="Beaver Pond"/>
+	<figcaption>
+	  <h3>Featured Sites</h3>
+	  <blockquote>
+	    <p>{{#_}}Explore restoration efforts!{{/_}}</p>
+	  </blockquote>
+	</figcaption><a href="/longfellow" rel="internal"></a>
+</figure>
+<figure class="snip1579">
+	<img src="/static/css/images/working-mulch.jpg" alt="kids-mulch"/>
+  <figcaption>
+    <h3>{{#_}}Planting{{/_}}</h3>
+    <blockquote>
+      <p></p>
+    </blockquote>
+  </figcaption><a href="#" rel="internal"></a>
+</figure>
+<figure class="snip1579">
+	<img src="/static/css/images/tools.jpg" alt="tools"/>
+  <figcaption>
+    <h3>{{#_}}Weeding{{/_}}</h3>
+    <blockquote>
+      <p></p>
+    </blockquote>
+  </figcaption><a href="#" rel="internal"></a>
+</figure>
+
+<br><br>
+{{#_}}This project made possible by our generous <a href="/page/sponsors" rel="internal">sponsors{{/_}}</a>.
