bogtobay content updates

--- a/src/flavors/bogtobay/jstemplates/pages/overview.html
+++ b/src/flavors/bogtobay/jstemplates/pages/overview.html
@@ -14,30 +14,38 @@
 <figure class="snip1579">
 	<img src="/static/css/images/beaver-pond1.jpg" alt="Beaver Pond"/>
 	<figcaption>
-	  <h3>Featured Sites</h3>
+	  <h3>Explore the creek</h3>
 	  <blockquote>
-	    <p>{{#_}}Explore restoration efforts!{{/_}}</p>
+	    <p>{{#_}}Navigate our urban stream and learn about restoration efforts to bring it to life.{{/_}}</p>
 	  </blockquote>
 	</figcaption><a href="/longfellow" rel="internal"></a>
 </figure>
 <figure class="snip1579">
-	<img src="/static/css/images/working-mulch.jpg" alt="kids-mulch"/>
+	<img src="/static/css/images/watershed_model.jpg" alt="watershed-model"/>
   <figcaption>
-    <h3>{{#_}}Planting{{/_}}</h3>
+    <h3>{{#_}}Explore the watershed{{/_}}</h3>
     <blockquote>
       <p></p>
     </blockquote>
-  </figcaption><a href="#" rel="internal"></a>
+  </figcaption><a href="/watershed" rel="internal"></a>
 </figure>
 <figure class="snip1579">
-	<img src="/static/css/images/tools.jpg" alt="tools"/>
+	<img src="/static/css/images/greenroof.jpg" alt="tools"/>
   <figcaption>
-    <h3>{{#_}}Weeding{{/_}}</h3>
+    <h3>{{#_}}Denny Green Roof{{/_}}</h3>
     <blockquote>
       <p></p>
     </blockquote>
-  </figcaption><a href="#" rel="internal"></a>
+  </figcaption><a href="/greenroof" rel="internal"></a>
 </figure>
-
+<figure class="snip1579">
+  <img src="/static/css/images/barton.jpg" alt="tools"/>
+  <figcaption>
+    <h3>{{#_}}Barton Rain Gardens{{/_}}</h3>
+    <blockquote>
+      <p></p>
+    </blockquote>
+  </figcaption><a href="/barton" rel="internal"></a>
+</figure>
 <br><br>
 {{#_}}This project made possible by our generous <a href="/page/sponsors" rel="internal">sponsors{{/_}}</a>.
