update fuzzy sentence, remove colon

--- a/src/flavors/pboakland/jstemplates/pages/overview.html
+++ b/src/flavors/pboakland/jstemplates/pages/overview.html
@@ -6,7 +6,7 @@
 
 {{#_}}
 <a href="http://www2.oaklandnet.com/oakca1/groups/ceda/documents/policy/oak062978.pdf"><h2>The results are in!</h2></a>
-<strong><em>You made it happen: here are your PB Oakland priorities winners:</em></strong>
+<strong><em>You made it happen: here are your PB Oakland priorities winners</em></strong>
 {{/_}}
 <br><br>
 <p>
