--- a/src/base/jstemplates/place-form-field-types.html
+++ b/src/base/jstemplates/place-form-field-types.html
@@ -12,7 +12,7 @@
              type="text" 
              id="geocode-address-field" 
              class="geocode-address-field"
-             value={{nlToBr existingContent}}>
+             value={{nlToBr content}}>
     </div>
   </div>
 {{/is}}
@@ -21,38 +21,38 @@
   <input id="datetimepicker" 
          name="{{ name }}" 
          type="text"
-         {{#if autocomplete}}class="is-autocomplete"{{/if}}
+         {{#if isAutocomplete}}class="is-autocomplete"{{/if}}
          {{^optional}}required{{/optional}}
-         value={{nlToBr existingContent}}>
+         value={{nlToBr content}}>
 {{/is}}
 
 {{#is type "text"}}
   <input id="place-{{ name }}" 
-         {{#if autocomplete}}class="is-autocomplete"{{/if}}
+         {{#if isAutocomplete}}class="is-autocomplete"{{/if}}
          name="{{ name }}" 
          type="{{ type }}" 
          {{#attrs}} {{ key }}="{{ value }}"{{/attrs}} 
          {{#unless autocomplete}} placeholder="{{ placeholder }}"{{/unless}}
          {{^optional}}required{{/optional}}
-         value={{nlToBr existingContent}}>
+         value={{nlToBr content}}>
 {{/is}}
 
 {{#is type "textarea"}}
   <textarea id="place-{{ name }}" 
-            {{#if autocomplete}}class="is-autocomplete"{{/if}}
+            {{#if isAutocomplete}}class="is-autocomplete"{{/if}}
             name="{{ name }}" 
             {{#attrs}} {{ key }}="{{ value }}"{{/attrs}} 
             {{#unless autocomplete}} placeholder="{{ placeholder }}"{{/unless}}
-            {{^optional}}required{{/optional}}>{{nlToBr existingContent}}</textarea>
+            {{^optional}}required{{/optional}}>{{nlToBr content}}</textarea>
 {{/is}}
 
 {{#is type "richTextarea"}}
   <div id="place-{{ name }}" 
-       class="rich-text-field{{#if autocomplete}} is-autocomplete{{/if}}"
+       class="rich-text-field{{#if isAutocomplete}} is-autocomplete{{/if}}"
        name="{{ name }}" 
        {{#attrs}} {{ key }}="{{ value }}"{{/attrs}} 
-       {{#unless autcomplete}} placeholder="{{ placeholder }}"{{/unless}}
-       {{^optional}}required{{/optional}}>{{{existingContent}}}</div>
+       {{#unless autcompleteValue}} placeholder="{{ placeholder }}"{{/unless}}
+       {{^optional}}required{{/optional}}>{{{content}}}</div>
 {{/is}}
 
 {{#is type "radio_big_buttons"}}
@@ -64,9 +64,9 @@
                value={{ value }} 
                class="big-btn" 
                {{^../optional}}required{{/../optional}}
-               {{#is value ../existingContent}}checked{{/is}}>
+               {{#if selected}}checked{{/if}}>
         <label for={{ value }}
-               class="{{#is value ../existingContent}}is-autocomplete{{/is}}">{{ label }}</label>
+               class="{{#ifAnd ../isAutocomplete selected}}is-autocomplete{{/ifAnd}}">{{ label }}</label>
     {{/each}}
   </div>
   <div style="clear:both"></div>
@@ -80,9 +80,9 @@
              id={{ value }} 
              value={{ value }} 
              class="big-btn"
-             {{#contains value ../existingContent}}checked{{/contains}}>
+             {{#if selected}}checked{{/if}}>
       <label for={{ value }}
-             class="{{#contains value ../existingContent}}is-autocomplete{{/contains}}">{{ label }}</label>
+             class="{{#ifAnd ../isAutocomplete selected}}is-autocomplete{{/ifAnd}}">{{ label }}</label>
     {{/each}}
   </div>
 {{/is}}
@@ -92,26 +92,21 @@
     <input type="checkbox" 
            name={{ name }} 
            id={{ name }} 
-           value={{#if autocompleteValue}}
-                   {{ autocompleteValue }}
+           value={{#if content.selected }}
+                   {{ content.selectedValue }}
                  {{else}}
-                   {{ content.[1].value }}
+                   {{ content.unselectedValue }}
                  {{/if}}
            data-input-type="binary_toggle" 
            class="big-btn"
-           {{#is autocompleteValue content.[0].value}}checked{{/is}}>
+           {{#if content.selected}}checked{{/if}}>
     <label for={{ name }}
-           {{#if autocompleteValue}}class="is-autocomplete"{{/if}}>
-      {{#if autocompleteValue}}
-        {{#is autocompleteValue content.[0].value}}
-          {{content.[0].label}}
-        {{/is}}
-        {{#is autocompleteValue content.[1].value}}
-          {{content.[1].label}}
-        {{/is}}
-      {{else}}
-        {{content.[1].label}}
-      {{/if}}
+           {{#ifAnd isAutocomplete content.selected}}class="is-autocomplete"{{/ifAnd}}>
+        {{#if content.selected }}
+          {{content.selectedLabel}}
+        {{else}}
+          {{content.unselectedLabel}}
+        {{/if}}
     </label>
   </div>
 {{/is}}
@@ -120,7 +115,7 @@
   <div>
     <select name={{ ../name }} 
             {{^optional}}required{{/optional}}
-            {{#if autocomplete}}class="is-autocomplete"{{/if}}>
+            {{#if isAutocomplete}}class="is-autocomplete"{{/if}}>
       <option value="" name="no_response">{{#_}}Select...{{/_}}</option>
       {{#each content}}
           <option value={{value}} {{#is value ../existingContent}}selected{{/is}}>{{label}}</option>
