--- a/src/base/jstemplates/place-detail.html
+++ b/src/base/jstemplates/place-detail.html
@@ -1,5 +1,6 @@
 <!-- Template for managing the place detail view, which might be rendered in
   regular mode or in editor mode. -->
+{{> place-detail-edit-bar }}
 
 {{> place-detail-story-bar }}
 
@@ -70,27 +71,6 @@
 </header>
 
 <section class="place-items">
-  {{#if isEditable}}
-    <div id="toggle-editor-btn" 
-         class="btn btn-small editor-btn">
-      <i class="fa fa-pencil" 
-         aria-hidden="true"></i> {{#_}}Edit this post{{/_}}
-    </div>
-
-    {{#if isEditingToggled}}
-      <div id="hide-place-model-btn" 
-           class="btn btn-small editor-btn btn-delete">
-        <i class="fa fa-times" 
-           aria-hidden="true"></i> {{#_}}Hide this post{{/_}}
-      </div>
-      <div id="update-place-model-btn" 
-           class="btn btn-small editor-btn btn-update{{#if isModified}} isModified{{/if}}">
-        <i class="fa fa-floppy-o" 
-           aria-hidden="true"></i> {{#_}}Save changes{{/_}}
-      </div>
-    {{/if}}
-  {{/if}}
-
   <form id="update-place-model-form">
     {{#each attachments }}
       <div class="place-item place-item-attachment place-attachment-{{ name }}">
