--- a/src/flavors/greensboropb/jstemplates/pages/about.html
+++ b/src/flavors/greensboropb/jstemplates/pages/about.html
@@ -3,10 +3,10 @@
 <br>
 <p>{{#_}}Greensboro Participatory Budgeting is a democratic process in which community members from all five City Council districts are directly deciding how to spend $500,000 ($100,000 per district).{{/_}}</p>
 
-<p>{{#_}}From December 2015 to March 2016, volunteer budget delegates will work to develop these initial ideas into full project proposals. Greensboro residents will able to vote from April-May 2016 to determine the winning projects.
+<p>{{#_}}From April to November 2017, volunteer budget delegates will work to develop these initial ideas into full project proposals. Greensboro residents will able to vote in October 2017 to determine the winning projects.
 {{/_}}</p>
 
-<p>{{#_}}For more information on participatory budgeting in Greensboro, visit <a href="http://www.greensboro-nc.gov/index.aspx?page=4796" target="_blank">greensboro-nc.gov</a>.{{/_}}</p>
+<p>{{#_}}For more information on participatory budgeting in Greensboro, visit <a href="http://www.greensboro-nc.gov/pb" target="_blank">greensboro-nc.gov/pb</a>.{{/_}}</p>
 
 <p>{{#_}}For information on the nationwide movement for PB, visit the website of the <a href="http://www.participatorybudgeting.org/" target="_blank">Participatory Budgeting Project{{/_}}</a>.</p>
 
