--- a/src/flavors/greensboropb/jstemplates/pages/involved.html
+++ b/src/flavors/greensboropb/jstemplates/pages/involved.html
@@ -3,14 +3,12 @@
 <p>{{#_}}Already submitted an idea? There are many more ways to get involved in participatory budgeting:{{/_}}</p>
 
 <h5>{{#_}}Attend a Neighborhood Assembly{{/_}}</h5>
-<p>{{#_}} Each district will have two formal neighborhood assemblies, in addition to at least three informal outreach events, to encourage widespread participation. {{/_}} <a href="http://www.greensboro-nc.gov/modules/showdocument.aspx?documentid=29009"> {{#_}}Click here</a> for upcoming assembly dates, times, and locations.{{/_}}</p>
+<p>{{#_}} Each district will have a neighborhood assembly and other, informal idea collection events, to encourage widespread participation.{{/_}} <a href="http://www.greensboro-nc.gov/index.aspx?page=5084">{{#_}}Click here</a> for upcoming assembly dates, times, and locations.{{/_}}</p>
 
 <h5>{{#_}}Connect with Us{{/_}}</h5>
 <p>{{#_}}Find us on <a href="https://www.facebook.com/PBGreensboro/" target="_blank"> Facebook</a> and follow us on <a href="https://twitter.com/GreensboroPB" target="_blank"> Twitter{{/_}}</a>!</p>
 
 <h5>{{#_}}Contact Us{{/_}}</h5>
 <p>{{#_}}<strong>Have a question?</strong><br>
-Please contact Ranata Reeder, Community Outreach Coordinator for Participatory Budgeting Greensboro, by <a href="mailto:ranata@participatorybudgeting.org"> e&#8209;mail </a> at ranata@participatorybudgeting.org or phone at 336&#8209;373&#8209;7750.<br>
-<br>
-Also, <strong>text PB to 1-855-910-7110</strong> to get updates on your phone.
+Please contact Valerie Warren, Community Outreach Coordinator for Participatory Budgeting Greensboro, by email at <a href="mailto:valerie@participatorybudgeting.org">valerie@participatorybudgeting.org</a> or phone at 336‑373‑7750.
 {{/_}}</p>
