--- a/src/base/jstemplates/activity-list-item.html
+++ b/src/base/jstemplates/activity-list-item.html
@@ -17,23 +17,17 @@
         </strong>
 
         {{#if is_place }}
-          {{ action }} a{{#if place.type_starts_with_vowel }}n{{/if }} <span class="place-type">{{ place.place_type_label }}</span>
-          {{#if place.name }}
-            named <span class="place-name">{{ place.name }}</span>
-          {{^}}
-            {{#if place.location }}
-              at <span class="place-name">{{>location-string place.location }}</span>
-            {{/if }}
+          {{ action }}: <span class="place-type">{{ place.name }}</span>
+          {{#if place.location }}
+            at <span class="place-name">{{>location-string place.location }}</span>
           {{/if }}
         {{else}}
-          {{ action }}
-
+          {{ action }}:
           {{#if place.name }}
             <span class="place-name">{{ place.name }}</span>
           {{else}}
             a{{# place.type_starts_with_vowel }}n{{/ place.type_starts_with_vowel }} {{ place.place_type_label }}
           {{/if }}
-
         {{/if }}
         {{/_}}</a>
       </li>
